cv skills section gap fix

--- a/css/cv.css
+++ b/css/cv.css
@@ -57,6 +57,7 @@
   "frontend"
   "."
   "backend";
+  gap: 24px
 }
 
 .frontend{
